Testing new interface

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel='stylesheet' href='/stylesheets/dropzone.css' />
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
     <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
   <!--<script type="text/javascript" src="/js/index.js"></script>-->
-  <script type="text/javascript" >
+  <script type="text/javascript">
 
   function analyzeStuff() {
   	
@@ -36,28 +35,15 @@
     $.ajax(ajaxSettings);
 }
   </script>
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <form action="/file-upload" class="dropzone">
-  <div class="fallback">
-    <input name="file" type="file" multiple />
-  </div>
-</form>
-<form action="/file-upload2" class="dropzone">
-  <div class="fallback">
-    <input name="file" type="file" multiple />
-  </div>
-</form>
+</head>
+<body>
 
-	<input type="button" value="analyze" onsubmit="analyzeStuff()">
-	<button onclick="analyzeStuff()">Click me</button>
+<label><strong>Upload File : </strong><input type="file" id="uploadfiles1" /></label><br/>
+<label><strong>Upload File : </strong><input type="file" id="uploadfiles2" /></label><br/>
+<button onclick="analyzeStuff()">Click me</button>
 	<div id="result">
 	</div>
-
-    <script src="/js/dropzone.js"></script>
-	
-
-  </body>
+<!-- Scripts -->
+<script src="/js/upload.js"></script>
+</body>
 </html>
