--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,13 +11,14 @@
   <!--<script type="text/javascript" src="/js/index.js"></script>-->
   <script type="text/javascript" >
 
-  function analyzeStuff() {
-  	
-    let success = function(result) {
+   function analyzeStuff() {
+    
+    let success = result => {
+        $(".loader").hide();
         $('#result').html(result);
     };
 
-    let error = function(error) {
+    let error = error => {
         console.error("Error while analyzing images: ", error);
     };
 
@@ -32,6 +33,8 @@
             }
         }
     };
+
+    $(".loader").show();
 
     $.ajax(ajaxSettings);
 }
@@ -57,7 +60,7 @@
 </form>
 
   <button onclick="analyzeStuff()">Analyze</button>
-
+  <div class="loader"><img src="/public/images/gifs/spinner.gif"></div>
   <div id="result">
   </div>
     <script src="/js/dropzone.js"></script>
