Solving loader bug

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,7 +60,7 @@
 </form>
 
   <button onclick="analyzeStuff()">Analyze</button>
-  <div class="loader"><img src="/public/images/gifs/spinner.gif"></div>
+  <div class="loader"><img src="/images/gifs/spinner.gif"></div>
   <div id="result">
   </div>
     <script src="/js/dropzone.js"></script>
