Solving undefined reference

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,8 +59,8 @@
   <div class="row">
 
     
-<%for (var result in results){%>
-  <div class="md-col-1"><%=results[result]%></div>    
+<%for (var score in scoreArray){%>
+  <div class="md-col-1"><%=score[scoreArray]%></div>    
   <%}%>
 
 </div>
