--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,10 @@ a {
     color: #00B7FF;
 }
 
+#result {
+	margin: 0;
+}
+
 .loader {
     display: none;
 }
@@ -14,4 +18,24 @@ a {
 .loader img {
     width: 300px;
     height: 187px;
+}
+
+.red {
+	color: red;
+}
+
+.green {
+	color: green;
+}
+
+.row {	
+	padding: 20px 20px;
+	text-align: center;
+	font-size: 15pt;
+	font-weight: bold;
+}
+
+.row .col-md-1 {	
+	margin: 16px;
+	width: 120px;
 }
