--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,14 +14,17 @@
    function analyzeStuff() {
     
     let success = result => {
+      console.log(result);
         let scoreArray = result.split(" ");
+
         $(".loader").hide();
         let html = "";
         scoreArray.forEach(score => {
-          html+= `<div class="md-col-1">${score}</div>`;
+          (score > 0) ? 
+          html+= `<div class="col-md-1 green">${score}</div>` : html+= `<div class="col-md-1 red">${score}</div>`;
         })
-        
-        $('#result').html(scoreArray);
+
+        $('#result').html(html);
         
     };
 
@@ -54,6 +57,9 @@
     <input name="file" type="file" multiple />
   </div>
 </form>
+<!-- <div class="container"> -->
+  <div id="result" class="row"></div>
+  <!-- </div> -->
 <form action="/file-upload2" class="dropzone">
   <div class="fallback">
     <input name="file" type="file" multiple />
@@ -61,16 +67,12 @@
 </form>
   <button onclick="analyzeStuff()">Analyze</button>
   <div class="loader"><img src="/images/gifs/spinner.gif"></div>
-  <div class="container">
-  <div id="result" class="row">
-
-    
-
-
-</div>
-  </div>
+  
     <script src="/js/dropzone.js"></script>
 	
-
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
 </html>
