result splitting is now using \n

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
     
     let success = result => {
       console.log(result);
-        let scoreArray = result.split(" ");
+        let scoreArray = result.split("\n");
 
         $(".loader").hide();
         let html = "";
