--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,6 +51,7 @@
   </script>
   </head>
   <body>
+    <div ><p class="logoICC">IBM <strong>Client Center</strong></p> </div>
     <h1><%= title %></h1>    
       <form action="/file-upload" class="dropzone">
   <div class="fallback">
