--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,9 @@
    function analyzeStuff() {
     
     let success = result => {
+
+      console.log(result);
+      console.log(scoreArray);
       
         let scoreArray = result.split("\n");
 
@@ -23,6 +26,9 @@
         let html = "";
 
         scoreArray.forEach(score => {
+
+          //skip invalid results
+          if("" == score) return;
           
           (score < 1) ? 
           //if score is less than 1, green
