--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,8 +16,6 @@
     
     let success = result => {
 
-      console.log(result);
-      console.log(scoreArray);
       
         let scoreArray = result.split("\n");
 
@@ -28,7 +26,7 @@
         scoreArray.forEach(score => {
 
           //skip invalid results
-          if("" == score) return;
+          if("" === score) return;
           
           (score < 1) ? 
           //if score is less than 1, green
