--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
   crossorigin="anonymous"></script>
   <script type="text/javascript" >
 
-    $.get("/clearPhotos");
+//    $.get("/clearPhotos");
 
     function renderImages(images) {
       images.forEach((image,index) => {
@@ -67,6 +67,13 @@
 
       $.ajax(ajaxSettings);
     }
+	function firstRowItems(string) {
+	return (string.indexOf('first') !== -1);
+}
+
+function secondRowItems(string) {
+	return (string.indexOf('second') !== -1);
+}
 
     function analyzeStuff2() {
 
@@ -79,27 +86,57 @@
 
         let html = "";
 
-        scoreArray.forEach(score => {
-
+        scoreArray.forEach((score,index) => {
+	if(index > 10) return;
           //skip invalid results
           if("" === score) return;
           
           (score < 1) ? 
           //if score is less than 1, green
-          html+= `<div class="col-md-1 green">${score}<br>Same person</div>` 
+          html= `<div class="green">${score}<br>Same person</div>` 
           //otherwise, red
-          : html+= `<div class="col-md-1 red">${score}<br>Different person</div>`;
+          : html= `<div class="red">${score}<br>Different person</div>`;
+
+	$("#result-score .result-score:nth-child("+index+")").html(html);
         })
 
-        $('#result').html(html);
+        //$('#result').html(html);
 
         let promiseArray = [];
 
-        result.fileList.forEach((file,index) => {
+        result.fileList.filter(firstRowItems).forEach((file,index) => {
+	if(index > 10) return;
 	let $img = $("<img>", {src: '/getImage?file='+ file,width: '80px', height: '120px'});
 	console.log("updating " + file + "on index " + index);
-$(".result-image:nth-child("+index+")").append($img);
+$("#result-images-first .result-image:nth-child("+index+")").append($img);
 //	 $("body").append($img);
+ /*         let p1 = new Promise((resolve, reject) => {
+
+            let ajaxSettings = {
+              type: "GET",
+              url: '/getImage?file='+file,
+              success: data => {
+                resolve(data);      
+              },
+              error: error => {
+                reject(error)
+              }
+              
+            };$("#result-score .result-score:nth-child("+index+")").append($img
+
+            $(".loader").show();
+
+            $.ajax(ajaxSettings);
+
+          });*/
+        });
+
+	result.fileList.filter(secondRowItems).forEach((file,index) => {
+	if(index > 10) return;
+        let $img = $("<img>", {src: '/getImage?file='+ file,width: '80px', height: '120px'});
+        console.log("updating " + file + "on index " + index);
+$("#result-images-second .result-image:nth-child("+index+")").append($img);
+//       $("body").append($img);
  /*         let p1 = new Promise((resolve, reject) => {
 
             let ajaxSettings = {
@@ -120,6 +157,7 @@ $(".result-image:nth-child("+index+")").append($img);
 
           });*/
         });
+
 
         Promise.all(promiseArray)
         .then(result =>{
@@ -172,20 +210,48 @@ $(".result-image:nth-child("+index+")").append($img);
     </div>
   </form>
   <!-- <div class="container"> -->
-  <div id="result" class="row">
-    <div class="result-image col-md-12"></div>
-    <div class="result-image col-md-12"></div>
-    <div class="result-image col-md-12"></div>
-    <div class="result-image col-md-12"></div>
-    <div class="result-image col-md-12"></div>
-    <div class="result-image col-md-12"></div>
-    <div class="result-image col-md-12"></div>
-    <div class="result-image col-md-12"></div>
-    <div class="result-image col-md-12"></div>
-    <div class="result-image col-md-12"></div>
-    <div class="result-image col-md-12"></div>
-    <div class="result-image col-md-12"></div>
-    <div class="result-image col-md-12"></div>
+  <div id="result-images-first" class="row">
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+  </div>
+	<div id="result-score" class="row">
+	<div class="result-score col-md-1"></div>
+<div class="result-score col-md-1"></div>
+<div class="result-score col-md-1"></div>
+<div class="result-score col-md-1"></div>
+<div class="result-score col-md-1"></div>
+<div class="result-score col-md-1"></div>
+<div class="result-score col-md-1"></div>
+<div class="result-score col-md-1"></div>
+<div class="result-score col-md-1"></div>
+<div class="result-score col-md-1"></div>
+<div class="result-score col-md-1"></div>
+<div class="result-score col-md-1"></div>
+<div class="result-score col-md-1"></div>
+</div>
+	 <div id="result-images-second" class="row">
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
   </div>
 
   <!-- </div> -->
