Photo and Video almost working

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,6 +15,10 @@ a {
     display: none;
 }
 
+#result-images-first #result-score #result-images-second {
+	display: none;
+}
+
 .loader img {
     width: 300px;
     height: 187px;
