--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,6 +82,63 @@
 <br>
 <button class="btn-primary btn" onclick="analyzeStuff2()">Analyze</button>
 <div class="loader"><img src="/images/gifs/spinner.gif"></div>
+<h2>Compare Video to photo</h2>
+
+<form action="/video-upload" class="dropzone">
+    <div class="fallback">
+      <input name="file" type="file" multiple />
+    </div>
+  </form>
+  <div id="result-images-first2" class="row">
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+    <div class="result-image col-md-1"></div>
+  </div>
+  <div id="result-score2" class="row">
+   <div class="result-score col-md-1"></div>
+   <div class="result-score col-md-1"></div>
+   <div class="result-score col-md-1"></div>
+   <div class="result-score col-md-1"></div>
+   <div class="result-score col-md-1"></div>
+   <div class="result-score col-md-1"></div>
+   <div class="result-score col-md-1"></div>
+   <div class="result-score col-md-1"></div>
+   <div class="result-score col-md-1"></div>
+   <div class="result-score col-md-1"></div>
+   <div class="result-score col-md-1"></div>
+   <div class="result-score col-md-1"></div>
+   <div class="result-score col-md-1"></div>
+ </div>
+ <div id="result-images-second2" class="row">
+  <div class="result-image col-md-1"></div>
+  <div class="result-image col-md-1"></div>
+  <div class="result-image col-md-1"></div>
+  <div class="result-image col-md-1"></div>
+  <div class="result-image col-md-1"></div>
+  <div class="result-image col-md-1"></div>
+  <div class="result-image col-md-1"></div>
+  <div class="result-image col-md-1"></div>
+  <div class="result-image col-md-1"></div>
+  <div class="result-image col-md-1"></div>
+  <div class="result-image col-md-1"></div>
+  <div class="result-image col-md-1"></div>
+</div>
+<form action="/file-upload3" class="dropzone">
+  <div class="fallback">
+    <input name="file" type="file" multiple />
+  </div>
+</form>
+<br>
+<button class="btn-primary btn" onclick="analyzeStuff3()">Analyze</button>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <!-- Latest compiled and minified JavaScript -->
